--- a/AspNetCoreRedisCachingDemo.csproj
+++ b/AspNetCoreRedisCachingDemo.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="EasyCaching.InMemory" Version="1.1.0" />
     <PackageReference Include="EasyCaching.Redis" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
