--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Redis": {
-    "Host": "localhost:6379"
+    "Host": "localhost:6379"  //  do not add http here
   }
 }
